src/objects/LeanData__Upload_Lead_Match__c.object
<CustomObject>
    <fields>
        <fullName>LeanData__CSV_Job_Id__c</fullName>
        <label>CSV Job Id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LeanData__CSV_Row_Id__c</fullName>
        <label>CSV Row Id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LeanData__Lead_City__c</fullName>
        <label>Lead City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeanData__Lead_Company__c</fullName>
        <label>Lead Company</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeanData__Lead_Email2__c</fullName>
        <label>Lead Email2</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>LeanData__Lead_Email__c</fullName>
        <label>Lead Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>LeanData__Lead_FirstName__c</fullName>
        <label>Lead FirstName</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeanData__Lead_Id__c</fullName>
        <label>Lead Id</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeanData__Lead_LastName__c</fullName>
        <label>Lead LastName</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeanData__Lead_Phone__c</fullName>
        <label>Lead Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>LeanData__Lead_PostalCode__c</fullName>
        <label>Lead PostalCode</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeanData__Lead_State__c</fullName>
        <label>Lead State</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeanData__Lead_Street__c</fullName>
        <label>Lead Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeanData__Match_Type__c</fullName>
        <label>Match Type</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <label>Upload Lead Match</label>
    <listViews>
        <fullName>LeanData__All</fullName>
        <columns>LeanData__CSV_Job_Id__c</columns>
        <columns>LeanData__CSV_Row_Id__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Upload Lead Match Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Upload Lead Matches</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>